# llm-council

./: .test-generation-complete  BUILD_SUMMARY.md  DEPLOYMENT.md  FINAL_DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md  TESTING.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICKSTART.md  TEST_COVERAGE_SUMMARY.md  TEST_GENERATION_COMPLETE.md  TEST_GENERATION_SUMMARY.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  verify_tests.sh
frontend/: eslint.config.js  package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  App.test.jsx  api.test.js  main.jsx  package.test.js  vitest-config.test.js
frontend/src/__tests__/: App.test.jsx  ChatInterface.test.jsx  README.md  Sidebar.test.jsx  Stage1.test.jsx  Stage2.test.jsx  Stage3.test.jsx  api.test.js  setup.js
frontend/src/__tests__/components/: ChatInterface.test.jsx  Sidebar.test.jsx  Stage1.test.jsx  Stage2.test.jsx  Stage3.test.jsx
frontend/src/components/: ChatInterface.test.jsx  Sidebar.jsx  Sidebar.test.jsx  Stage1.test.jsx  Stage2.test.jsx  Stage3.test.jsx
frontend/src/components/__tests__/: App.test.jsx  ChatInterface.test.jsx  Sidebar.test.jsx  Stage1.test.jsx  Stage2.test.jsx  Stage3.test.jsx
frontend/src/test/: App.test.jsx  setup.js
tests/: README.md  __init__.py  conftest.py  test_backend_main.py  test_config.py  test_council.py  test_main.py  test_openrouter.py  test_pyproject_toml.py  test_storage.py
